[tool.poetry]
name = "testemulator"
version = "0.1.0"
description = "Тестовый эмулятор"
authors = ["Anton, Kirill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
motor = "^3.6.0"
pydantic = "^2.9.2"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14.0"
pyyaml = "^6.0.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
